# CVPI

./: .gitignore  .gitmodules  AUTHORS  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.am  README  SConstruct  buildme  camera_setup.c  camera_setup_test.c  capture.c  cmake_install.cmake  configure.ac  cvpi.h  cvpi_base.h  cvpi_camera_setup.c  cvpi_camera_setup.h  cvpi_egl_config.c  cvpi_egl_config.h  cvpi_egl_config_tests.c  cvpi_egl_config_tests.h  cvpi_egl_surface_functions.c  cvpi_egl_surface_functions.h  cvpi_image_functions.c  cvpi_image_functions.h  cvpi_image_headers.c  cvpi_image_headers.h  cvpi_image_tests.c  cvpi_image_tests.h  cvpi_tests.c  cvpi_vg_ext.c  cvpi_vg_ext.h  eglConfig.c  eglConfig.h  eglConfigTest.c  eglCreateConfigHeader.c  eglGetConfigs.c  endianess.c  (+9 more)
bindings/: Makefile.am
bindings/c++/: cvpi.cpp  openvg.cpp
bindings/chicken/cvpi/: cvpi.import.scm  cvpi.release-info  cvpi.scd  cvpi.scm  cvpi.setup
bindings/chicken/openvg/: openvg.import.scm  openvg.release-info  openvg.scd  openvg.scm  openvg.setup
bindings/chicken/src/: cvpi-chicken.scd  openvg-chicken.scd  vgu-chicken.scd
bindings/chicken/vgu/: vgu.import.scm  vgu.scd  vgu.scm  vgu.setup
doc/: cvpi_manual.tex  sources.bib
examples/: yuv_convert.c  yuyv2bmp.c
examples/motion_dection/: cvpi_sample_motion_detection.c  cvpi_sample_motion_detection.sh  cvpi_sample_motion_detection_continuous.sh  cvpi_sample_motion_detection_data.sh  motion_detect_data
extras/: channels2bin  channels2bin.orig  convolve.el  cvpi_camera_resolutions.pl  make-grep  splitChannels.awk  yuva2bmp.c
include/: Makefile.am  cvpi.h  cvpi_base.h  cvpi_egl_config.h  cvpi_image_functions.h  cvpi_image_headers.h  cvpi_vg_ext.h
include-aux/: cvpi_camera_setup.h  cvpi_egl_surface_functions.h
lib/: cmake_install.cmake
lib-aux/: cmake_install.cmake
src/: CMakeLists.txt  Makefile.am  cvpi_base.c  cvpi_egl_config.c  cvpi_image_functions.c  cvpi_image_headers.c  cvpi_private_header.h  cvpi_vg_ext.c
src-aux/: CMakeLists.txt  cmake_install.cmake  cvpi_camera_setup.c  cvpi_egl_surface_functions.c
test/: cvpi_egl_config_tests.h  cvpi_egl_surface_functions.c  cvpi_image_tests.c  cvpi_tests.c
test/test_images_correct/: mark1_black.yuv  mark1_black_yuva.ppm
tests/: CMakeCache.txt  CMakeLists.txt  Makefile.am  SConscript  bin2channels  channelFilesCombine.awk  channels2bin  cmake_install.cmake  cvpi_camera_resolutions.pl  cvpi_camera_setup.c  cvpi_camera_setup.h  cvpi_egl_config_tests.c  cvpi_egl_config_tests.h  cvpi_egl_surface_functions.c  cvpi_egl_surface_functions.h  cvpi_image_mean_data_generator.py  cvpi_image_tests-chicken.scm  cvpi_image_tests.c  cvpi_image_tests.h  cvpi_property_tests.cpp  cvpi_property_tests_norc.cpp  cvpi_property_tests_rc.cpp  cvpi_sample_motion_detection.c  cvpi_sample_motion_detection.sh  cvpi_sample_motion_detection_continuous.sh  cvpi_sample_motion_detection_data.sh  cvpi_sample_yuv2bmp.c  cvpi_test_maker.py  cvpi_tests.c  cvpi_tests.mk  cvpi_tests.sh  files  khr_lock_surface_test.c  select_tests.sh  test_image_maker.org  test_list
tests/bin2channels_channels2bin/input/: data_8
tests/hypothesis/: CMakeLists.txt  cvpi_property_tests_remote.c  testing_hypothesis.py
tests/rapidcheck/: CMakeLists.txt  cvpi_property_tests_rc.cpp
tests/test_bindings/: cvpi_image_tests-chicken.scm
tests/test_cvpi/: cvpi_image_tests.c  cvpi_image_tests.h
tests/test_egl_config/: cvpi_egl_config_tests.c  cvpi_egl_config_tests.h
tests/test_images/: COPYING  test_morphology_2
tests/test_images_correct/: test_threshold_1
tests/test_images_tmp/: README
utility/: eglGetConfigs.c
